fix prevent horizontal scroll
overflow-x: hidden will prevent ability to scroll horizontally when content
such as images flow over the sides of the page

--- a/src/root.css
+++ b/src/root.css
@@ -61,6 +61,7 @@ body {
   font-family: var(--body-font);
   font-size: 100%; /* unsure why this is necessary */
   color: var(--color-body-text);
+  overflow-x: hidden;
 }
 
 /* Utility Classes */
